# cogl

./: Android.mk  Makefile.am  NEWS  configure.ac
cogl/: Makefile.am  Makefile.sources  cogl-atlas-texture.c  cogl-atlas-texture.h  cogl-attribute-buffer.c  cogl-attribute-buffer.h  cogl-attribute.c  cogl-attribute.h  cogl-bitmap.c  cogl-bitmap.h  cogl-buffer-private.h  cogl-color.c  cogl-color.h  cogl-context-private.h  cogl-context.c  cogl-context.h  cogl-defines.h.win32.in  cogl-defines.h.win32_SDL.in  cogl-display.c  cogl-display.h  cogl-egl-private.h  cogl-egl.h  cogl-error.h  cogl-euler.c  cogl-euler.h  cogl-feature-private.c  cogl-feature-private.h  cogl-frame-info.c  cogl-frame-info.h  cogl-framebuffer-private.h  cogl-framebuffer.c  cogl-framebuffer.h  cogl-gles2-context.c  cogl-gles2.h  cogl-glx-display-private.h  cogl-gtype-private.h  cogl-index-buffer.c  cogl-index-buffer.h  cogl-indices.c  cogl-indices.h  (+47 more)
cogl-gles2/: Makefile.am
cogl-gst/: Makefile.am  cogl-gst-plugin.c  cogl-gst-video-sink.c  cogl-gst-video-sink.h
cogl-pango/: Makefile.am  cogl-pango-pipeline-cache.c
cogl-path/: Makefile.am  cogl-path-private.h  cogl-path.c  cogl-path.h  cogl2-path-functions.h
cogl/android/cogl/: cogl-defines.h
cogl/driver/gl/: cogl-framebuffer-gl.c  cogl-pipeline-fragend-glsl.c  cogl-util-gl-private.h  cogl-util-gl.c
cogl/driver/gl/gl/: cogl-driver-gl.c
cogl/driver/gl/gles/: cogl-driver-gles.c
cogl/gl-prototypes/: cogl-all-functions.h
cogl/winsys/: cogl-texture-pixmap-x11-private.h  cogl-texture-pixmap-x11.c  cogl-texture-pixmap-x11.h  cogl-winsys-egl-android.c  cogl-winsys-egl-gdl.c  cogl-winsys-egl-kms.c  cogl-winsys-egl-null.c  cogl-winsys-egl-wayland.c  cogl-winsys-egl-x11.c  cogl-winsys-egl.c  cogl-winsys-glx-feature-functions.h  cogl-winsys-glx.c  cogl-winsys-private.h  cogl-winsys-sdl2.c  cogl-winsys-wgl.c
debian/: changelog  control  control.in  gir1.2-deepin-cogl-1.0.install  gir1.2-deepin-coglgst-2.0.install  gir1.2-deepin-coglpango-1.0.install  libdeepin-cogl-common.install  libdeepin-cogl-dev.install  libdeepin-cogl-gles2-20.install  libdeepin-cogl-gles2-dev.install  libdeepin-cogl-gst-dev.install  libdeepin-cogl-gst20.install  libdeepin-cogl-pango-dev.install  libdeepin-cogl-pango20.install  libdeepin-cogl-path-dev.install  libdeepin-cogl-path20.install  libdeepin-cogl20.install  rules
debian/patches/: 0001-kms-winsys-don-t-wait-for-a-flip-when-page-flipping-.patch  series
doc/reference/cogl/: Makefile.am
doc/reference/cogl-2.0-experimental/: Makefile.am
doc/reference/cogl-gst/: Makefile.am
examples/: Makefile.am  cogl-crate.c  cogl-gjs.js  cogl-point-sprites.c  cogl-stereo.c  cogl-x11-tfp.c
po/: ca.po  el.po  es.po  eu.po  fr.po  ko.po  lt.po  nb.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  sr@latin.po  sv.po  tr.po  ug.po  zh_CN.po  zh_TW.po
test-fixtures/: test-utils.c
tests/conform/: Makefile.am
tests/micro-perf/: Makefile.am  test-journal.c
tests/unit/: Makefile.am
